[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplemmo-bot"
version = "2.3.0"
description = "Bot automatizado para SimpleMMO com interface gráfica moderna"
authors = [
    {name = "SimpleMMO Bot Team", email = "dev@simplemmo-bot.com"},
]
readme = "documentation/README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["automation", "gaming", "selenium", "simplemmo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "selenium>=4.15.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]
advanced = [
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "opencv-python>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/your-username/simplemmo-bot"
Documentation = "https://github.com/your-username/simplemmo-bot/blob/main/documentation/README.md"
Repository = "https://github.com/your-username/simplemmo-bot"
"Bug Tracker" = "https://github.com/your-username/simplemmo-bot/issues"

[project.scripts]
simplemmo-bot = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]

# ==========================================
# RUFF CONFIGURATION
# ==========================================
[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings  
    "F",     # pyflakes
    "I",     # isort
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "W293",   # blank line contains whitespace
    "W291",   # trailing whitespace
    "F401",   # imported but unused (common in development)
    "E203",   # whitespace before ':'
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T201", "PT"]
"docs/**/*" = ["T201"]
"scripts/**/*" = ["T201", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["core", "driver", "ui", "utils"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==========================================
# MYPY CONFIGURATION (RELAXED)
# ==========================================
[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = false

# Allow dynamic typing for UI components
[[tool.mypy.overrides]]
module = [
    "ui.*",
    "core.*",
]
ignore_errors = true

# Selenium specific ignores
[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "tkinter.*",
    "PIL.*",
]
ignore_missing_imports = true

# ==========================================
# PYTEST CONFIGURATION
# ==========================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=10",
    "-ra",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "selenium: Tests requiring Selenium WebDriver",
    "slow: Slow running tests",
    "gui: Tests requiring GUI components",
]
timeout = 300

# ==========================================
# COVERAGE CONFIGURATION
# ==========================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/gui_final.py",  # GUI code hard to test
    "*/quest_simple.py",  # Has syntax errors - needs fixing
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
